# docker-coq-github-action-demo

./: .gitignore  .travis.yml  LICENSE  Makefile.local  README.md  _CoqProject  coq-demo.opam  coq-depexts-test.opam  coq-test.opam
.github/workflows/: build-coq-demo.yml  misc-test.yml
src/: demo.v  test.v
tests/: test_demo.v
