opam-version: "2.0"
maintainer: "erik@martin-dorel.org"
version: "dev"

homepage: "https://github.com/erikmd/docker-coq-github-action-demo"
dev-repo: "git+https://github.com/erikmd/docker-coq-github-action-demo.git"
bug-reports: "https://github.com/erikmd/docker-coq-github-action-demo/issues"
license: "MIT"

synopsis: "Demo of docker-coq-action"
description: """
Demo of docker-coq-action.
"""

build: [
  ["sh" "-c" "coq_makefile -f _CoqProject -o Makefile"]
  [make "-j%{jobs}%"]
]
install: [make "install"]

run-test: [make "test"]

depends: [
  "ocaml" {>= "4.05.0"}
  "coq" {(>= "8.6") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.7.0")}
]

tags: [
]
authors: [
  "Erik Martin-Dorel"
]
